<resources>
    <string name="app_name">FinalProject</string>
    <string name="login_button_text">Log In</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="get_started_now">Get Started Now!</string>
    <string name="already_have_account">Already have an account? Login Now!</string>
    <string name="email_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="no_account_signup">Don\'t have an account? Sign up!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="cacheManagerHandlingMessage" formatted="false">
    Cache manager is handling the operation</string>



</resources>