<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABBCE1"
    tools:context=".LogIn">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@+id/signupTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/madlogo" />

    <TextView
        android:id="@+id/getStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="220dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/get_started_now"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/signupTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />


    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:fontFamily="sans-serif-black"
        android:onClick="moveToSignup"
        android:text="@string/sign_up_button_text"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/alreadyHaveAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.983" />

    <TextView
        android:id="@+id/alreadyHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:onClick="moveToLogIn"
        android:text="@string/already_have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <LinearLayout
        android:id="@+id/signupTextLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/signupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/newEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_edit_text"
            android:elevation="4dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:autofillHints="password"
            android:background="@drawable/rounded_edit_text"
            android:elevation="4dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="12dp" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:autofillHints="password"
            android:background="@drawable/rounded_edit_text"
            android:elevation="4dp"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:padding="12dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>