<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABBCE1"
    tools:context=".LogIn">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/getStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/madlogo" />

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/getStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/welcome_back"
        android:textColor="@color/primary_text"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/userInfoLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Sign-Up Button -->
    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/button_color"
        android:fontFamily="sans-serif-black"
        android:onClick="loginAccount"
        android:text="@string/login_button_text"
        android:textColor="@color/button_text_color"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/dontHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- No Account Text -->
    <TextView
        android:id="@+id/dontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:onClick="moveToSignup"
        android:text="@string/no_account_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- User Input Layout -->
    <LinearLayout
        android:id="@+id/userInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/accountOptionsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Email Input -->
        <EditText
            android:id="@+id/emailText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_edit_text"
            android:elevation="4dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <!-- Password Input -->
        <EditText
            android:id="@+id/passwordText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:autofillHints="password"
            android:background="@drawable/rounded_edit_text"
            android:elevation="4dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="12dp" />
    </LinearLayout>

    <!-- Account Options Layout -->
    <LinearLayout
        android:id="@+id/accountOptionsLayout"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="164dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/dontHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Remember Me -->
        <TextView
            android:id="@+id/rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/remember_me"
            android:textAlignment="center"
            android:textSize="15sp" />

        <!-- Forgot Password -->
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textSize="15sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
